Fix: Partner Sponsor Logo Spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -443,6 +443,10 @@ img.carousel-card-image {
   width: 40%;
 }
 
+.partner-sponsor-logo {
+  width: 40%;
+}
+
 .sponsor-logo {
   display: flex;
   align-items: center;
